// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarizedSelect Basic Rendering should render correctly with default props 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Basic Rendering should render with custom placeholders 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Edge Cases should handle empty options array 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Edge Cases should handle options with undefined labels 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Grouped Options should render grouped options correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Loading State should render with loading state 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-os2fvf"
        data-testid="loading-spinner"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin ant-spin-dot"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Multiple Selection Mode should render with multiple values 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-multiple ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <div
          class="ant-select-selection-overflow"
        >
          <div
            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
            style="opacity: 1;"
          >
            <span
              class="ant-select-selection-item"
              title="2 plans selected"
            >
              <span
                class="ant-select-selection-item-content"
              >
                2 plans selected
              </span>
            </span>
          </div>
          <div
            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
            style="opacity: 1;"
          >
            <div
              class="ant-select-selection-search"
              style="width: 0px;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
              <span
                aria-hidden="true"
                class="ant-select-selection-search-mirror"
              >
                 
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SummarizedSelect Single Selection Mode should render with selected value 1`] = `
<div>
  <div
    class="ant-select ant-select-outlined summarizedSelect hemisphericSelect css-dev-only-do-not-override-os2fvf ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-wrap"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Bronze Plan"
        >
          Bronze Plan
        </span>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        data-testid="caret-down"
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
